Auto-commit on 2025-06-01 18:37:00